# minesweeper

./: .gitignore  README.md  minesweeper.cabal  stack.yaml
src/: Main.hs  Minesweeper.hs
src/App/: Params.hs  Ui.hs
src/Lib/: Minesweeper.hs
