name:                minesweeper
version:             0.1.0.0
synopsis:            Simple minesweeper game with textual UI
description:         Please see README.md
homepage:            http://github.com/githubuser/minesweeper#readme
license:             BSD3
license-file:        LICENSE
author:              Stanisław Swianiewicz
maintainer:          swian@post.pl
copyright:           2015 Stanisław Swianiewicz
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable minesweeper
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lib.Minesweeper
                     , App.Ui
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , array
                     , lens
                     , data-default
                     , random
                     , vty
                     , brick
                     , optparse-applicative
